kyverno_test_policies/9c_kyverno_example_policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: label-namespaces
spec:
  rules:
    - name: set-namespace-yehaw-true
      match:
        any:
        - resources:
            kinds:
            - Namespace
      mutate:
        patchStrategicMerge:
          metadata:
            labels:
              # add this label
              yehaw: "true"
